@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# @(#) $RCSfile: strss7,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/12/07 09:57:00 $
+# @(#) $RCSfile: strss7,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/08/12 16:49:59 $
 # Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 # All Rights Reserved.
@@ -270,18 +270,18 @@ esac
 
 # =============================================================================
 # 
-# @(#) $RCSfile: strss7,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/12/07 09:57:00 $
+# @(#) $RCSfile: strss7,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/08/12 16:49:59 $
 #
 # -----------------------------------------------------------------------------
 #
-# Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com/>
+# Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 #
 # All Rights Reserved.
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
-# Foundation; version 2 of the License.
+# Foundation; version 3 of the License.
 #
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
@@ -289,8 +289,8 @@ esac
 # details.
 #
 # You should have received a copy of the GNU General Public License along with
-# this program; if not, write to the Free Software Foundation, Inc., 675 Mass
-# Ave, Cambridge, MA 02139, USA.
+# this program.  If not, see <http://www.gnu.org/licenses/>, or write to the
+# Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #
 # -----------------------------------------------------------------------------
 #
@@ -315,7 +315,13 @@ esac
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/12/07 09:57:00 $ by $Author: brian $
+# Last Modified $Date: 2007/08/12 16:49:59 $ by $Author: brian $
+#
+# -----------------------------------------------------------------------------
+#
+# $Log: strss7,v $
+# Revision 0.9.2.2  2007/08/12 16:49:59  brian
+# - header updates
 #
 # =============================================================================
 
