@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# @(#) $RCSfile: strss7.sh,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/08 22:42:18 $
+# @(#) $RCSfile: strss7.sh,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/08/12 16:49:59 $
 # Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 # All Rights Reserved.
@@ -218,7 +218,7 @@ esac
 
 # =============================================================================
 # 
-# @(#) $RCSfile: strss7.sh,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/08 22:42:18 $
+# @(#) $RCSfile: strss7.sh,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/08/12 16:49:59 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -229,7 +229,7 @@ esac
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
-# Foundation; version 2 of the License.
+# Foundation; version 3 of the License.
 #
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
@@ -237,8 +237,8 @@ esac
 # details.
 #
 # You should have received a copy of the GNU General Public License along with
-# this program; if not, write to the Free Software Foundation, Inc., 675 Mass
-# Ave, Cambridge, MA 02139, USA.
+# this program.  If not, see <http://www.gnu.org/licenses/>, or write to the
+# Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #
 # -----------------------------------------------------------------------------
 #
@@ -263,8 +263,15 @@ esac
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/03/08 22:42:18 $ by $Author: brian $
+# Last Modified $Date: 2007/08/12 16:49:59 $ by $Author: brian $
+#
+# -----------------------------------------------------------------------------
+#
+# $Log: strss7.sh,v $
+# Revision 0.9.2.6  2007/08/12 16:49:59  brian
+# - header updates
 #
 # =============================================================================
+
 
 # vim: ft=sh sw=4 tw=80
