@@ -1,17 +1,17 @@
 # =============================================================================
 # 
-# @(#) $RCSfile: strss7.in,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/05/08 03:34:55 $
+# @(#) $RCSfile: strss7.in,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/08/12 16:50:00 $
 #
 # -----------------------------------------------------------------------------
 #
-# Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com>
+# Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 #
 # All Rights Reserved.
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
-# Foundation; version 2 of the License.
+# Foundation; version 3 of the License.
 #
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
@@ -19,8 +19,8 @@
 # details.
 #
 # You should have received a copy of the GNU General Public License along with
-# this program; if not, write to the Free Software Foundation, Inc., 675 Mass
-# Ave, Cambridge, MA 02139, USA.
+# this program.  If not, see <http://www.gnu.org/licenses/>, or write to the
+# Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,7 +45,13 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/05/08 03:34:55 $ by $Author: brian $
+# Last Modified $Date: 2007/08/12 16:50:00 $ by $Author: brian $
+#
+# -----------------------------------------------------------------------------
+#
+# $Log: strss7.in,v $
+# Revision 0.9.2.3  2007/08/12 16:50:00  brian
+# - header updates
 #
 # =============================================================================
 
